<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>mv_cameras_ros</name>
  <version>0.0.0</version>
  <description>...</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
</package>
